idea/testData/multiplatform/platformDependencyInCommon/jvm/jvm.kt
fun checkCloneable(array: Array<String>) {
    array.<!UNRESOLVED_REFERENCE!>clone<!>()
}

<!EXPLICIT_METADATA_IS_DISALLOWED!>@Metadata<!>
class MetaWithError
